--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html lang="en">
 <head></head>
 <body>
-  <p>This is where the text will go</p>
+  <p>Hypothesis: Despite many people claiming that older games were better, newer games score higher ratings than older games.</p>
+  <p>Method: Took the average rating of sample of 100s of game release on the same day, but in different years.</p>
   <img src=""></img>
+  <p>Result: Older games receive worse view than newer ones.</p>
 </body>
 </html>
