--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <p>Hypothesis: Despite many people claiming that older games were better, newer games score higher ratings than older games.</p>
   <p>Method: Took the average rating of sample of 100s of game release on the same day, but in different years.</p>
-  <img src=""></img>
+  <img src="gameData.png"></img>
   <p>Result: Older games receive worse view than newer ones.</p>
 </body>
 </html>
