--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <head></head>
 <body>
   <p>Growing up, I would always hear nostalgia-driven statements about how games are getting worse as time goes on, 
-    so I wanted to put that to the test. I obtained data on the steam releases through Kaggle.\n 
+    so I wanted to put that to the test. I obtained data on the steam releases through Kaggle.
     The data was a little difficult to work with, the Date category was not work and excel would not format it correctly 
-    even with its tool built for doing that, which mean I could not sort it by date. I analyzed the data using \n
+    even with its tool built for doing that, which mean I could not sort it by date. I analyzed the data using
     Microsoft Excel’s “Analyze Data”function. The results are shown below.</p>
   <p>Hypothesis: Despite many people claiming that older games were better, newer games score higher ratings than older games.</p>
   <p>Method: Took the average rating of sample of 100s of game release on the same day, but in different years.</p>
