--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     Microsoft Excel’s “Analyze Data”function. The results are shown below.</p>
   <p>Hypothesis: Despite many people claiming that older games were better, newer games score higher ratings than older games.</p>
   <p>Method: Took the average rating of sample of 100s of game release on the same day, but in different years.</p>
-  <img src="/gameData.png"></img>
+  <img src="/gameData.PNG"></img>
   <p>Older games, in fact, receive worse view than newer ones.</p>
 </body>
 </html>
