--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <html lang="en">
 <head></head>
 <body>
-  <p>Growing up, I would always hear nostalgia-driven statements about how games are getting worse as time goes on, 
-    so I wanted to put that to the test. I obtained data on the steam releases through Kaggle.
-    The data was a little difficult to work with, the Date category was not work and excel would not format it correctly 
-    even with its tool built for doing that, which mean I could not sort it by date. I analyzed the data using
-    Microsoft Excel’s “Analyze Data”function. The results are shown below.</p>
-  <p>Hypothesis: Despite many people claiming that older games were better, newer games score higher ratings than older games.</p>
-  <p>Method: Took the average rating of sample of 100s of game release on the same day, but in different years.</p>
+  <p>Growing up, I would always hear nostalgia-driven statements about how games are getting worse as time goes on, so I wanted to put that to the test. I obtained data on the steam releases through Kaggle. The data was a little difficult to work with because the date category was not a date datatype and excel would not format it correctly even with its tool built for doing that, which mean I could not easily sort it by date. I analyzed the data using Microsoft Excel’s “Analyze Data” function. The results are shown below.</p>
+  <h1>Hypothesis</h1>
+  <p>Despite many people claiming that older games were better, newer games score higher ratings than older games.</p>
+  <h1>Method</h1>
+  <p>The average rating of sample of 100s of game release on the same day was taken, but in different years.</p>
+  <h1>picture of results</h1>
   <img src="gameData.PNG"></img>
   <p>Older games, in fact, receive worse view than newer ones.</p>
 </body>
