--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <p>The average rating of sample of 100s of game release on the same day was taken, but in different years.</p>
   <h1>Picture of Results</h1>
   <img src="gameData.PNG"></img>
-  <p>Older games, in fact, receive worse view than newer ones.</p>
+  <p>Older games, in fact, receive worse reviews than newer ones.</p>
 </body>
 </html>
