--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
   <h1>Picture of Results</h1>
   <img src="gameData.PNG"></img>
   <p>Older games, in fact, receive worse reviews than newer ones.</p>
+  <h1>Possible Confounding Variables</h1>
+  <ul>
+  <li>In order to be able to actually process this data in excel, it had do be limited to just April, so it is possible, though unlikely, that the other month may have different results.</li>
+  <li>It is possible that even though the games were released earlier in time, they were getting reviews to this day, and people might not be as forgiving today as they were back in 2015.</li>
+  <li>If the bullet point above is true, it is also possible that older games may not still run on modern hardware, and thus people will review it negatively. but the opposite argument can be made about newer games</li>
+</ul>
 </body>
 </html>
