--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <p>Despite many people claiming that older games were better, newer games score higher ratings than older games.</p>
   <h1>Method</h1>
   <p>The average rating of sample of 100s of game release on the same day was taken, but in different years.</p>
-  <h1>Picture of Results</h1>
+  <h1>Results</h1>
   <img src="gameData.PNG"></img>
-  <p>Older games, in fact, receive worse reviews than newer ones.</p>
+  <p>Conclusion: older games, in fact, receive worse reviews than newer ones.</p>
   <h1>Possible Confounding Variables</h1>
   <ul>
   <li>In order to be able to actually process this data in excel, it had do be limited to just April, so it is possible, though unlikely, that the other month may have different results.</li>
