--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head></head>
 <body>
+  <p>Owen Pick's analysis of game reviews over time</p>
   <h1>Intro</h1>
   <p>Growing up, I would always hear nostalgia-driven statements about how games are getting worse as time goes on, so I wanted to put that to the test. I obtained data on the steam releases through Kaggle. The data was a little difficult to work with because the date category was not a date datatype and excel would not format it correctly even with its tool built for doing that, which mean I could not easily sort it by date. I analyzed the data using Microsoft Excel’s “Analyze Data” function. The results are shown below.</p>
   <h1>Hypothesis</h1>
