--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <h1>Method</h1>
   <p>The average rating of sample of 100s of game release on the same day was taken, but in different years.</p>
   <h1>Results</h1>
-  <img src="gameData.PNG"></img>
-  <p>Conclusion: older games, in fact, receive worse reviews than newer ones.</p>
+  <img src="game_data_1.PNG"></img>
+  <img src="game_data_2.PNG"></img>
+  <p>Conclusion: older games, in fact, receive slightly worse reviews than newer ones.</p>
   <h1>Possible Confounding Variables</h1>
   <ul>
   <li>In order to be able to actually process this data in excel, it had do be limited to just April, so it is possible, though unlikely, that the other month may have different results.</li>
