--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <h1>Hypothesis</h1>
   <p>Despite many people claiming that older games were better, newer games score higher ratings than older games.</p>
   <h1>Method</h1>
-  <p>The average rating of sample of 100s of game release on the same day was taken, but in different years.</p>
+  <p>The average rating of sample of 100s of game release on the same day* was taken, but in different years.</p>
   <h1>Results</h1>
   <img src="game_data_1.PNG"></img>
   <img src="game_data_2.PNG"></img>
@@ -17,6 +17,8 @@
   <li>In order to be able to actually process this data in excel, it had do be limited to just April, so it is possible, though unlikely, that the other month may have different results.</li>
   <li>It is possible that even though the games were released earlier in time, they were getting reviews to this day, and people might not be as forgiving today as they were back in 2015.</li>
   <li>If the bullet point above is true, it is also possible that older games may not still run on modern hardware, and thus people will review it negatively. but the opposite argument can be made about newer games</li>
-</ul>
+  </ul>
+  <p>*The data was formatting in such a way that I could not sort by date, making it extremely difficult to just sort by year</p>
+  <p>**The dataset was also to large to create graphs for so I hade to trim down the sample size from ~60,000 to around 300</p>
 </body>
 </html>
