--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <li>In the first module, I learned about how data is stored, specifically, how data is stored in a CSV file. I also learned how tons of these csv-like files can be combined to create databases and can be interfaced with SQL. I also learned a bit about some basic statistics and how to find basic correlation. I also learned how data can be visualized.</li>
     <li>In the second module, I learned about how data is getting bigger and bigger and how we are now in the “data age” as the website puts it with humans having created over 175 zettabytes of data. I learned about the source of big data and how most of it comes from science projects such as the Large Hadron Collider particle accelerator and how a significant chunk of it is from digital libraries and medical records.</li>
     <li>In the final module, I got an overview of machine learning algorithms, more specifically, a quick overview of Neural networks. This module also talked about how bias is can show up in data and how it can influence hiring decisions, as well as how it can be used in the criminal justice system (exactly like what was talked about in Hello World – Justice). The final section also went over how bias can show up in facial recognition software and how people have started moving to oppose the use of facial recognition. Machine learning bias also shows up in other places you might not expect such as language translation.</li>
-    <li>test wan't too bad.</li>
+    <li>I didn't have too much trouble with the unit test and got a decent score on it the first time I took it. I thought the concepts in the unit weren't too difficult to understand</li>
   </ol>
 </body>
 </html>
